# predictiveness-curve

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  setup.cfg  setup.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
notebooks/: example.ipynb  examples.ipynb
predictiveness_curve/: __init__.py  base.py
predictivness_curve/: base.py
predictivness_curve/notebooks/: examples.ipynb
tests/: test_convert_label.py  test_enrichment_factor.py  test_init.py  test_predictiveness_curve.py
