[metadata]
name = predictiveness-curve
version = attr: predictiveness_curve.__version__
url = https://github.com/yamasakih/predictiveness-curve
license = MIT
author = Hiroyuki Yamasaki
author_email = yamasaki.phone@gmail.com
description = Plot predictiveness curve
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = License :: OSI Approved :: MIT License

[options]
packages = predictiveness_curve
python_requires = >=3.6
install_requires = 
    matplotlib
    numpy

[flake8]
exclude =
    ./.mypy_cache/,
    ./.pytest_cache/,
    ./.venv/,
    ./build/,
    ./docs/

[mypy]
[mypy-matplotlib]
ignore_missing_imports = True
[mypy-matplotlib.pyplot]
ignore_missing_imports = True
[mypy-numpy]
ignore_missing_imports = True
